--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог Кэт энерджи</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
-    <header class="page-header">
+    <header class="page-header container">
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="https://via.placeholder.com/33.32x37.61" width="33.32" height="37.61" alt="Логотип (символ) Кэт энерджи">
         <img class="page-header__logo-text" src="https://via.placeholder.com/101x18" width="101" height="18" alt="Логотип (текст) Кэт энерджи">
@@ -16,11 +17,11 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a href="index.html">Главная</a>
-          </li>
           <li class="main-nav__item main-nav__item--active">
-            <a>Каталог продукции</a>
+            <a>Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
             <a href="form.html">Подбор программы</a>
@@ -30,11 +31,13 @@
     </header>
 
     <main class="page-main">
-      <h1 class="page__title">Каталог продукции</h1>
+      <div class="container">
+        <h1 class="page__title">Каталог продукции</h1>
+      </div>
 
       <section class="basic-goods">
         <h2 class="visually-hidden">Основные продукты Кэт Энерджи</h2>
-        <div class="basic-goods__wrapper">
+        <div class="container">
           <ul class="basic-goods__list">
             <li class="basic-goods__item product-card">
               <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
@@ -169,82 +172,90 @@
               </dl>
               <a class="product-card__button button" href="#">Заказать</a>
             </li>
+            <li class="basic-goods__item basic-goods__item--more-goods">
+              <h3 class="basic-goods__more-goods-title">Показать еще 100500 товаров</h3>
+              <p>На самом деле вкусов гораздо больше!</p>
+              <a class="basic-goods__button button" href="#">Показать все</a>
+            </li>
           </ul>
-          <div class="basic-goods__more-goods">
-            <h3 class="basic-goods__more-goods-title">Показать еще 100500 товаров</h3>
-            <p>На самом деле вкусов гораздо больше!</p>
-            <a class="basic-goods__button button" href="#">Показать все</a>
-          </div>
         </div>
       </section>
 
       <section class="additional-goods">
-        <div class="additional-goods__wrapper">
+        <div class="container">
           <h2 class="additional-goods__title">Дополнительные товары</h2>
-          <ul class="additional-goods__list">
-            <li class="additional-goods__item">
-              <h3 class="additional-good__title">Сахарозаменитель</h3>
-              <p class="additional-good__parameter">1 упаковка (100 г)</p>
-              <p class="additional-good__parameter">200 Р.</p>
-              <a class="additional-goods__button button" href="#">Заказать</a>
-            </li>
-            <li class="additional-goods__item">
-              <h3 class="additional-good__title">Питьевая вода</h3>
-              <p class="additional-good__parameter">5 литров</p>
-              <p class="additional-good__parameter">50 Р.</p>
-              <a class="additional-goods__button button" href="#">Заказать</a>
-            </li>
-            <li class="additional-goods__item">
-              <h3 class="additional-good__title">Молоко</h3>
-              <p class="additional-good__parameter">1 литр</p>
-              <p class="additional-good__parameter">100 Р.</p>
-              <a class="additional-goods__button button" href="#">Заказать</a>
-            </li>
-            <li class="additional-goods__item">
-              <h3 class="additional-good__title">Витамины</h3>
-              <p class="additional-good__parameter">1 упаковка (30 г)</p>
-              <p class="additional-good__parameter">300 Р.</p>
-              <a class="additional-goods__button button" href="#">Заказать</a>
-            </li>
-          </ul>
-          <div class="additional-goods__bonus">
-            <p class="additional-goods__bonus-text">Закажите все и получите чехол для кота в подарок!</p>
+          <div class="additional-goods__wrapper">
+            <ul class="additional-goods__list">
+              <li class="additional-goods__item">
+                <h3 class="additional-good__title">Сахарозаменитель</h3>
+                <p class="additional-good__parameter">1 упаковка (100 г)</p>
+                <p class="additional-good__price">200 Р.</p>
+                <a class="additional-goods__button button" href="#">Заказать</a>
+              </li>
+              <li class="additional-goods__item">
+                <h3 class="additional-good__title">Питьевая вода</h3>
+                <p class="additional-good__parameter">5 литров</p>
+                <p class="additional-good__price">50 Р.</p>
+                <a class="additional-goods__button button" href="#">Заказать</a>
+              </li>
+              <li class="additional-goods__item">
+                <h3 class="additional-good__title">Молоко</h3>
+                <p class="additional-good__parameter">1 литр</p>
+                <p class="additional-good__price">100 Р.</p>
+                <a class="additional-goods__button button" href="#">Заказать</a>
+              </li>
+              <li class="additional-goods__item">
+                <h3 class="additional-good__title">Витамины</h3>
+                <p class="additional-good__parameter">1 упаковка (30 г)</p>
+                <p class="additional-good__price">300 Р.</p>
+                <a class="additional-goods__button button" href="#">Заказать</a>
+              </li>
+            </ul>
+            <div class="additional-goods__bonus">
+              <p class="additional-goods__bonus-text">Закажите все и получите чехол для кота в подарок!</p>
+            </div>
           </div>
         </div>
       </section>
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <div class="page-footer__contacts contacts">
+      <div class="page-footer__contacts contacts container">
+        <div class="contacts__wrapper">
           <p class="contacts__invitation">Приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8</p>
-          <p class="contacts__city">Санкт-Петербург</p>
-          <img class="contacts__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="Карта расположения Кэт Энерджи">
+          <div class="contacts__address-wrapper">
+            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8</p>
+            <p class="contacts__city">Санкт-Петербург</p>
+          </div>
         </div>
-        <div class="page-footer__logo">
+        <img class="contacts__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="Карта расположения Кэт Энерджи">
+      </div>
+      <div class="page-footer__wrapper">
+        <div class="container">
+          <div class="page-footer__logo">
           <a class="page-footer__logo-link" href="index.html">
             <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип (текст) Кэт энерджи">
           </a>
-        </div>
-        <div class="page-footer__social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-            </li>
-          </ul>
-        </div>
-        <div class="page-footer__copyright copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <p>HTML Academy</p>
-            <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
-          </a>
+          </div>
+          <div class="page-footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              </li>
+            </ul>
+          </div>
+          <div class="page-footer__copyright copyright">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+              <p>HTML Academy</p>
+              <img class="copyright__logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
+            </a>
+          </div>
         </div>
       </div>
     </footer>
