--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
+    <svg style="display: none">
+      <symbol  viewBox="0 0 23 13" id="icon-vk"><path d="M.07 2c0-.63.42-.96 1.27-1.01L4.6 1c.22 0 .36.09.44.27.33.91.7 1.7 1.12 2.37.42.66.96 1.43 1.63 2.3a.3.3 0 00.29.16.28.28 0 00.24-.13l.07-.2.02-3.16c0-.22-.06-.37-.19-.44A1.92 1.92 0 007.53 2c-.26-.04-.4-.17-.4-.4 0-.05.02-.09.03-.11C7.46.7 8.34.3 9.8.3L11 .29c.56 0 1.02.12 1.38.35.37.23.55.6.55 1.1v4.15a.56.56 0 00.28.09c.22 0 .41-.11.57-.33 1.6-1.88 2.48-3.13 2.6-3.77a.29.29 0 01.05-.09c.1-.18.27-.34.5-.47.24-.14.44-.23.62-.28a.5.5 0 01.2-.04h3.39l.22.02c.29 0 .51.12.67.35a.63.63 0 01.12.24 1.5 1.5 0 01.06.4v.13c-.1.5-.36 1.03-.78 1.6-.41.57-.94 1.18-1.58 1.84-.65.66-1.05 1.09-1.2 1.3-.14.14-.2.28-.2.4 0 .1.05.2.17.33l3.2 3.36a.94.94 0 01.26.64c0 .28-.13.52-.4.7a1.83 1.83 0 01-.94.3l-.37.03h-3.33a.8.8 0 00-.08 0 .8.8 0 01-.1.02c-.31 0-.61-.12-.89-.35l-2.06-2.16a1.1 1.1 0 00-.3-.24 26.3 26.3 0 00-.44 1.63l-.07.31c-.14.43-.45.68-.92.77l-.3.02H9.74a5.92 5.92 0 01-3.62-1.4 14.53 14.53 0 01-3.25-3.59A32.86 32.86 0 01.18 2.52 1.25 1.25 0 01.07 2zm13.15 4.73a1.66 1.66 0 01-.83-.21c-.25-.14-.37-.33-.37-.58v-4.2c0-.25-.07-.42-.22-.52-.14-.1-.4-.16-.77-.16L9.8 1.1c-.63 0-1.1.09-1.42.27.64.26.96.67.96 1.24v3.22c-.03.3-.18.56-.44.76a1.4 1.4 0 01-.88.3c-.43 0-.77-.17-1-.53a18.52 18.52 0 01-2.54-4.1l-.2-.47-2.9-.02c-.2 0-.3.01-.33.03-.02.02-.03.07-.03.16 0 .1.02.22.05.34l.46 1.03A23.41 23.41 0 005.5 9.58c1.44 1.53 2.85 2.29 4.23 2.29h2.2c.08 0 .15-.02.19-.06a.53.53 0 00.1-.25l.05-.19.42-1.6c.11-.22.22-.37.3-.44a.86.86 0 01.57-.2c.35 0 .71.17 1.08.53l1.86 1.97c.11.16.24.24.37.24h3.6c.45 0 .67-.1.67-.28a.31.31 0 00-.07-.18l-3.17-3.3a1.17 1.17 0 01-.38-.83c0-.3.12-.58.35-.84A18 18 0 0119 5.22a28.2 28.2 0 001.43-1.59c.41-.5.68-.94.81-1.35l.07-.23a.24.24 0 01-.02-.12c0-.06-.01-.1-.03-.14h-3.43a1.2 1.2 0 00-.53.33l-.13.35c-.36.84-1.32 2.14-2.86 3.9a1.67 1.67 0 01-1.08.36z"/></symbol>
+      <symbol viewBox="0 0 16 16" id="icon-inst"><path d="M7.98.06c1.34 0 2.43.02 3.27.05.72.03 1.36.16 1.92.37a3.99 3.99 0 012.31 2.32c.22.56.35 1.2.38 1.92a89.87 89.87 0 010 6.53 5.96 5.96 0 01-.38 1.92 3.99 3.99 0 01-.9 1.4 3.99 3.99 0 01-1.4.91c-.57.22-1.21.35-1.93.38-.84.03-1.93.05-3.27.05a91.88 91.88 0 01-3.26-.05 5.96 5.96 0 01-1.92-.38 3.99 3.99 0 01-1.4-.9 3.99 3.99 0 01-.92-1.4 6.02 6.02 0 01-.37-1.93 91.73 91.73 0 01-.05-3.27c0-1.33.02-2.42.05-3.26C.14 4 .27 3.36.49 2.8c.2-.55.5-1.01.9-1.4A3.99 3.99 0 012.8.47C3.37.27 4 .14 4.73.11A91.73 91.73 0 017.98.06zm0 1.03c-1.38 0-2.51.02-3.39.05-.56.02-1.08.12-1.56.3a2.85 2.85 0 00-1.6 1.6 5 5 0 00-.29 1.55A98.83 98.83 0 001.1 8c0 1.38.02 2.51.05 3.38.02.57.12 1.09.3 1.57.31.75.84 1.28 1.6 1.6.47.17 1 .27 1.55.29a99.38 99.38 0 006.79 0 5.01 5.01 0 001.56-.3 2.85 2.85 0 001.6-1.6c.17-.47.27-1 .29-1.55a99.38 99.38 0 000-6.79 5.01 5.01 0 00-.3-1.56 2.85 2.85 0 00-1.6-1.6 5 5 0 00-1.55-.29 98.8 98.8 0 00-3.4-.05zm0 10.07c.88 0 1.63-.31 2.25-.93.62-.62.93-1.37.93-2.25s-.31-1.62-.93-2.24a3.06 3.06 0 00-2.25-.93c-.87 0-1.62.31-2.24.93-.62.62-.93 1.37-.93 2.24s.31 1.63.93 2.25c.62.62 1.37.93 2.24.93zm0-7.24c1.13 0 2.09.4 2.88 1.19.8.8 1.19 1.75 1.19 2.87s-.4 2.09-1.2 2.88c-.78.8-1.74 1.19-2.87 1.19s-2.08-.4-2.87-1.2c-.8-.78-1.19-1.74-1.19-2.87s.4-2.08 1.19-2.87c.8-.8 1.75-1.19 2.87-1.19zm5.2-.15a.9.9 0 01-.29.66.95.95 0 01-.69.27.9.9 0 01-.66-.27.9.9 0 01-.27-.66c0-.27.09-.5.27-.7a.9.9 0 01.66-.27.93.93 0 01.68.29.93.93 0 01.3.68z"/></symbol>
+      <symbol viewBox="0 0 13 20" id="icon-fb"><path d="M11.5.83H8.75a4.63 4.63 0 00-3.24 1.32 4.45 4.45 0 00-1.34 3.18v2.7H1.42v3.59h2.75v7.19h3.66v-7.19h2.75l.92-3.6H7.83v-2.7a.89.89 0 01.27-.63.93.93 0 01.65-.26h2.75V.83z" stroke-linecap="round" stroke-linejoin="round"/></symbol>
+      <symbol  viewBox="0 0 27 34" id="logo-htmlacademy"><path d="M13.64.02L13.5 0 0 1.4v24.61L13.5 34 27 26.01V1.41L13.64 0zm11.6 25L13.5 31.96 1.77 25.02v-10.1l11.68 6.93.02 1.25-8.02-4.75v1.23l8.04 4.8.02 1.3-8.05-4.76v1.22l8.04 4.81 8.12-4.83V16.9l3.62-2.15v10.26zm0-11.57L22 15.33l-1.48.88-7.06-4.19-.01 1.23 6.04 3.57-.06.03-.13.07-.86.5-4.98-2.95-.01 1.22 3.93 2.33-.93.61-.02.01-2.97-1.74-.01 1.23 1.94 1.13-1.98 1.19L1.8 13.58l11.63-6.96 11.8 6.83zm0-1.22L13.43 5.3 1.77 12.22V2.99L13.5 1.76 25.23 3v9.24z"/></symbol>
+    </svg>
+
     <header class="page-header container">
       <a class="page-header__logo">
         <picture>
@@ -42,6 +49,9 @@
           <div class="container promo__wrapper">
             <p class="promo__slogan">Занялся собой? Займись котом!</p>
             <picture>
+              <source type="image/webp" media="(min-width: 1440px)" srcset="../img/index-can-desktop.webp 1x, ../img/index-can-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="../img/index-can-tablet.webp 1x, ../img/index-can-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="../img/index-can-mobile.webp 1x, ../img/index-can-mobile@2x.webp 2x">
               <source media="(min-width: 1440px)" srcset="../img/index-can-desktop.png 1x, ../img/index-can-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="../img/index-can-tablet.jpg 1x, ../img/index-can-tablet@2x.jpg 2x">
               <img class="promo__image" src="../img/index-can-mobile.png" srcset="../img/index-can-mobile@2x.png 2x" width="280" height="270" alt="Фото упаковки Кэт энерджи">
@@ -88,11 +98,11 @@
             <p class="case__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat <br>Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
             <div class="case__numbers-wrapper">
               <dl class="case__list">
-                <div class="case__item">
+                <div class="case__item case__item--weight">
                   <dt class="case__number">5 кг</dt>
                   <dd class="case__description">снижение <br>веса</dd>
                 </div>
-                <div class="case__item">
+                <div class="case__item case__item--time">
                   <dt class="case__number">60 дней</dt>
                   <dd class="case__description">затрачено <br>времени</dd>
                 </div>
@@ -102,21 +112,31 @@
           </div>
           <div class="case__slider">
             <div class="case__slider-wrapper">
-              <picture>
-                <source media="(min-width: 1440px)" srcset="../img/before-desktop.png 1x, ../img/before-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="../img/before-tablet.png 1x, ../img/before-tablet@2x.png 2x">
-                <img class="case__image-before" src="../img/before-mobile.png" srcset="../img/before-mobile@2x.png 2x" width="311" height="232" alt="Фото Бориса до приема Кэт Энерджи">
-              </picture>
-              <picture>
-                <source media="(min-width: 1440px)" srcset="../img/after-desktop.png 1x, ../img/after-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="../img/after-tablet.png 1x, ../img/after-tablet@2x.png 2x">
-                <img class="case__image-after" src="../img/after-mobile.png" srcset="../img/after-mobile@2x.png 2x" width="251" height="240" alt="Фото Бориса после приема Кэт Энерджи">
-              </picture>
+              <p class="case__image-before-wrapper">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1440px)" srcset="../img/before-desktop.webp 1x, ../img/before-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="../img/before-tablet.webp 1x, ../img/before-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="../img/before-mobile.webp 1x, ../img/before-mobile@2x.webp 2x">
+                  <source media="(min-width: 1440px)" srcset="../img/before-desktop.png 1x, ../img/before-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="../img/before-tablet.png 1x, ../img/before-tablet@2x.png 2x">
+                  <img class="case__image-before" src="../img/before-mobile.png" srcset="../img/before-mobile@2x.png 2x" width="311" height="232" alt="Фото Бориса до приема Кэт Энерджи">
+                </picture>
+              </p>
+              <p class="case__image-after-wrapper">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1440px)" srcset="../img/after-desktop.webp 1x, ../img/after-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="../img/after-tablet.webp 1x, ../img/after-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="../img/after-mobile.webp 1x, ../img/after-mobile@2x.webp 2x">
+                  <source media="(min-width: 1440px)" srcset="../img/after-desktop.png 1x, ../img/after-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="../img/after-tablet.png 1x, ../img/after-tablet@2x.png 2x">
+                  <img class="case__image-after" src="../img/after-mobile.png" srcset="../img/after-mobile@2x.png 2x" width="251" height="240" alt="Фото Бориса после приема Кэт Энерджи">
+                </picture>
+              </p>
             </div>
-            <p class="case__slider-toggles">
+            <div class="case__slider-toggles">
               <button class="case__slider-toggle" type="button">Было</button>
               <button class="case__slider-toggle" type="button">Стало</button>
-            </p>
+            </div>
           </div>
         </div>
       </section>
@@ -131,6 +151,9 @@
         </div>
       </div>
       <picture>
+        <source type="image/webp" media="(min-width: 1440px)" srcset="../img/map-desktop.webp 1x, ../img/map-desktop@2x.webp 2x">
+        <source type="image/webp" media="(min-width: 768px)" srcset="../img/map-tablet.webp 1x, ../img/map-tablet@2x.webp 2x">
+        <source type="image/webp" srcset="../img/map-mobile.webp 1x, ../img/map-mobile@2x.webp 2x">
         <source media="(min-width: 1440px)" srcset="../img/map-desktop.png 1x, ../img/map-desktop@2x.png 2x">
         <source media="(min-width: 768px)" srcset="../img/map-tablet.png 1x, ../img/map-tablet@2x.png 2x">
         <img class="contacts__map" src="../img/map-mobile.png" srcset="../img/map-mobile@2x.png 2x" width="320" height="362" alt="Карта расположения Кэт Энерджи">
@@ -145,29 +168,37 @@
           <div class="page-footer__social social">
             <ul class="social__list">
               <li class="social__item">
-                <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+                <a class="social__link" href="https://vk.com/htmlacademy">
                   <span class="visually-hidden">Мы в Вконтакте</span>
-                  <svg width="23" height="16"  viewBox="0 0 23 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M.07 3.993c0-.622.423-.957 1.27-1.006l3.26.018c.22 0 .365.091.438.274.336.915.711 1.704 1.127 2.369.416.664.96 1.43 1.63 2.295.059.11.154.165.285.165a.276.276 0 00.24-.128l.067-.201.021-3.165c0-.219-.062-.365-.186-.438-.124-.074-.353-.128-.689-.165-.263-.037-.394-.17-.394-.402 0-.05.007-.086.022-.11.306-.793 1.182-1.189 2.626-1.189l1.226-.018c.554 0 1.014.116 1.379.347.364.232.547.598.547 1.098v4.151a.562.562 0 00.284.092c.22 0 .409-.11.57-.33 1.604-1.877 2.472-3.133 2.604-3.767a.29.29 0 01.044-.092c.102-.182.27-.34.503-.475.233-.134.438-.226.613-.274a.507.507 0 01.197-.037h3.392l.219.018c.292 0 .518.116.678.348a.63.63 0 01.12.238c.022.085.037.17.044.256.008.085.011.134.011.146v.128c-.102.5-.36 1.033-.777 1.6-.415.567-.944 1.18-1.586 1.838-.642.659-1.044 1.092-1.204 1.299-.131.146-.197.28-.197.402 0 .098.058.208.175.33l3.195 3.365a.939.939 0 01.263.64c0 .28-.131.512-.394.695a1.826 1.826 0 01-.941.31l-.372.02h-3.327a.794.794 0 00-.087.008.802.802 0 01-.088.01c-.32 0-.62-.116-.897-.348-.102-.098-.788-.817-2.057-2.158a1.106 1.106 0 00-.307-.238c-.058.195-.135.475-.23.841-.094.366-.164.628-.207.787l-.066.31c-.146.427-.452.684-.92.769l-.306.018H9.743c-1.21 0-2.418-.463-3.622-1.39-1.203-.927-2.287-2.124-3.25-3.594-.963-1.469-1.86-3.18-2.691-5.13a1.254 1.254 0 01-.11-.53zM13.223 8.73a1.66 1.66 0 01-.831-.21c-.248-.14-.372-.333-.372-.577V3.737c0-.244-.073-.418-.22-.522-.145-.103-.4-.155-.765-.155l-1.248.036c-.627 0-1.101.092-1.422.275.642.256.963.67.963 1.243v3.22c-.03.304-.175.557-.438.758a1.405 1.405 0 01-.875.302c-.438 0-.774-.177-1.007-.53C5.87 6.925 5.024 5.559 4.469 4.267l-.197-.476-2.91-.018c-.19 0-.296.01-.318.028-.022.018-.033.07-.033.155 0 .11.015.226.044.348l.46 1.024c1.225 2.646 2.556 4.73 3.994 6.255 1.437 1.524 2.848 2.286 4.234 2.286h2.189c.088 0 .153-.021.197-.064.044-.043.08-.125.11-.247l.043-.183.416-1.61c.117-.219.219-.365.306-.438a.86.86 0 01.57-.201c.35 0 .707.176 1.072.53l1.86 1.975c.117.159.24.238.372.238h3.611c.438 0 .657-.091.657-.274a.312.312 0 00-.066-.183l-3.173-3.31c-.248-.257-.372-.531-.372-.824 0-.292.116-.573.35-.841.19-.244.558-.65 1.105-1.216a28.203 28.203 0 001.434-1.591c.408-.494.678-.942.81-1.345l.065-.237a.243.243 0 01-.022-.12c0-.054-.007-.1-.022-.137H17.82a1.199 1.199 0 00-.525.33l-.131.347c-.365.841-1.32 2.14-2.867 3.896a1.672 1.672 0 01-1.073.366z" fill="#666"/></svg>
+                  <svg class="social__icon social__icon--vkontakte" width="23" height="16">
+                    <use xlink:href="#icon-vk"></use>
+                  </svg>
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+                <a class="social__link" href="https://www.instagram.com/htmlacademy">
                   <span class="visually-hidden">Мы в Инстаграме</span>
-                  <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M7.984.063c1.334 0 2.422.015 3.266.046.719.032 1.36.157 1.922.375.541.209 1.01.51 1.406.907.396.395.698.864.906 1.406.22.562.344 1.203.375 1.922.032.843.047 1.932.047 3.265 0 1.334-.015 2.422-.047 3.266-.03.719-.156 1.36-.375 1.922a3.987 3.987 0 01-.906 1.406 3.987 3.987 0 01-1.406.906c-.563.22-1.203.344-1.922.375-.844.032-1.932.047-3.266.047a91.88 91.88 0 01-3.265-.047c-.719-.03-1.36-.156-1.922-.375a3.987 3.987 0 01-1.406-.906 3.987 3.987 0 01-.907-1.406C.266 12.609.141 11.969.11 11.25a91.735 91.735 0 01-.046-3.266c0-1.333.015-2.421.046-3.265.032-.719.157-1.36.375-1.922.209-.542.51-1.01.907-1.406A3.987 3.987 0 012.797.484C3.359.266 4 .141 4.719.11A91.733 91.733 0 017.984.063zm0 1.03c-1.385 0-2.515.016-3.39.048-.563.02-1.084.12-1.563.296a2.853 2.853 0 00-1.594 1.594c-.177.48-.276 1-.296 1.563a98.83 98.83 0 00-.047 3.39c0 1.386.015 2.516.047 3.391.02.563.12 1.083.296 1.563.313.75.844 1.28 1.594 1.593.48.177 1 .276 1.563.297.875.031 2.005.047 3.39.047 1.386 0 2.516-.016 3.391-.047a5.015 5.015 0 001.563-.297 2.852 2.852 0 001.593-1.594c.177-.479.276-1 .297-1.562.031-.875.047-2.005.047-3.39 0-1.386-.016-2.516-.047-3.391a5.015 5.015 0 00-.297-1.563 2.853 2.853 0 00-1.594-1.594c-.479-.177-1-.276-1.562-.296a98.803 98.803 0 00-3.39-.047zm0 10.063c.875 0 1.623-.31 2.243-.93.62-.62.93-1.367.93-2.242s-.31-1.622-.93-2.242a3.056 3.056 0 00-2.243-.93c-.875 0-1.622.31-2.242.93-.62.62-.93 1.367-.93 2.242s.31 1.623.93 2.243c.62.62 1.367.93 2.242.93zm0-7.234c1.125 0 2.084.396 2.875 1.187.792.792 1.188 1.75 1.188 2.875s-.396 2.084-1.188 2.875c-.791.792-1.75 1.188-2.875 1.188s-2.083-.396-2.875-1.188c-.791-.791-1.187-1.75-1.187-2.875s.396-2.083 1.187-2.875c.792-.791 1.75-1.187 2.875-1.187zm5.188-.156c0 .26-.094.481-.281.664a.949.949 0 01-.688.273.904.904 0 01-.664-.273.904.904 0 01-.273-.664c0-.271.09-.5.273-.688a.891.891 0 01.664-.281.93.93 0 01.68.289.93.93 0 01.289.68z" fill="#666"/></svg>
+                  <svg class="social__icon social__icon--instagram" width="16" height="16">
+                    <use xlink:href="#icon-inst"></use>
+                  </svg>
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+                <a class="social__link" href="https://www.facebook.com/htmlacademy">
                   <span class="visually-hidden">Мы в Фейсбуке</span>
-                  <svg viewBox="0 0 13 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11.5 0.833252H8.75001C7.53443 0.833252 6.36864 1.30674 5.5091 2.14957C4.64956 2.99239 4.16667 4.1355 4.16667 5.32743V8.02394H1.41667V11.6193H4.16667V18.81H7.83334V11.6193H10.5833L11.5 8.02394H7.83334V5.32743C7.83334 5.08905 7.92992 4.86042 8.10182 4.69186C8.27373 4.52329 8.50689 4.4286 8.75001 4.4286H11.5V0.833252Z" stroke="#666666" stroke-width="1.1" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                  <svg class="social__icon social__icon--facebook" width="13" height="20">
+                    <use xlink:href="#icon-fb"></use>
+                  </svg>
                 </a>
               </li>
             </ul>
           </div>
           <div class="page-footer__copyright copyright">
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-              <p>HTML Academy</p>
-              <img class="copyright__logo" src="../img/logo_htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
+              HTML Academy
+              <svg role="img" class="copyright__logo" width="27" height="34">
+                <use xlink:href="#logo-htmlacademy"></use>
+              </svg>
             </a>
           </div>
         </div>
