--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Кэт энерджи: Подбор программы</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="preload" href="../fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin>
   </head>
   <body class="page__body">
     <svg style="display: none">
@@ -17,7 +18,7 @@
     </svg>
 
     <header class="page-header container">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <picture>
           <source media="(min-width: 1440px)" srcset="../img/logo-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -54,11 +55,11 @@
                 <ul class="application__list">
                   <li class="application__item">
                     <label class="application__label application__label--text application__label--required" for="application-cat-name">Имя:*</label>
-                    <input id="application-cat-name" type="text" name="cat-name" placeholder="Барсик">
+                    <input id="application-cat-name" type="text" name="cat-name" placeholder="Барсик" required>
                   </li>
                   <li class="application__item">
                     <label class="application__label application__label--text application__label--required" for="application-cat-weight">Вес (кг):*</label>
-                    <input id="application-cat-weight" type="number" name="cat-weight" placeholder="7">
+                    <input id="application-cat-weight" type="number" name="cat-weight" placeholder="7" required>
                   </li>
                   <li class="application__item">
                     <label class="application__label application__label--text" for="application-cat-age">Возраст (лет):</label>
@@ -88,14 +89,14 @@
               <ul class="application__list application__list--two-columns">
                 <li class="application__item">
                   <label class="application__label application__label--text application__label--required" for="application-client-email">E-mail:*</label>
-                  <input class="application__input application__input--email" id="application-client-email" type="email" name="client-email" placeholder="kuklachev@gmail.com">
+                  <input class="application__input application__input--email" id="application-client-email" type="email" name="client-email" placeholder="kuklachev@gmail.com" required>
                   <svg class="application__icon-email" width="20" height="20">
                     <use xlink:href="#icon-email"></use>
                   </svg>
                 </li>
                 <li class="application__item">
                   <label class="application__label application__label--text application__label--required" for="application-client-phone" >Телефон:*</label>
-                  <input class="application__input application__input--phone" id="application-client-phone" type="tel" name="client-phone" placeholder="8 (960) 900-60-90">
+                  <input class="application__input application__input--phone" id="application-client-phone" type="tel" name="client-phone" placeholder="8 (960) 900-60-90" required pattern="8\s\([0-9]{3}\)\s[0-9]{3}-[0-9]{2}-[0-9]{2}">
                   <svg class="application__icon-phone" width="20" height="20">
                     <use xlink:href="#icon-phone"></use>
                   </svg>
@@ -139,21 +140,26 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__contacts contacts contacts--inner-page container">
-        <p class="contacts__invitation">Приглашаем <br>к сотрудничеству <br>дилеров!</p>
-        <div class="contacts__address-wrapper">
-          <p class="contacts__address">ул. Большая <br>Конюшенная, д. 19/8</p>
-          <p class="contacts__city">Санкт-Петербург</p>
+      <div class="page-footer__contacts contacts contacts--inner-page">
+        <div class="contacts__text-block container">
+          <p class="contacts__invitation">Приглашаем <br>к сотрудничеству <br>дилеров!</p>
+          <div class="contacts__address-wrapper">
+            <p class="contacts__address">ул. Большая <br>Конюшенная, д. 19/8</p>
+            <p class="contacts__city">Санкт-Петербург</p>
+          </div>
+        </div>
+        <div class="contacts__map">
+          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A03432c4579b2095a171b70dc28104d3c920fa020d9275bb464601fc84fb11eee&amp;source=constructor" width="100%" height="362" frameborder="0"></iframe>
+          <picture>
+            <source type="image/webp" media="(min-width: 1440px)" srcset="../img/map-desktop.webp 1x, ../img/map-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="../img/map-tablet.webp 1x, ../img/map-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="../img/map-mobile.webp 1x, ../img/map-mobile@2x.webp 2x">
+            <source media="(min-width: 1440px)" srcset="../img/map-desktop.png 1x, ../img/map-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="../img/map-tablet.png 1x, ../img/map-tablet@2x.png 2x">
+            <img class="contacts__map-image" src="../img/map-mobile.png" srcset="../img/map-mobile@2x.png 2x" width="320" height="362" alt="Карта расположения Кэт Энерджи">
+          </picture>
         </div>
       </div>
-      <picture>
-        <source type="image/webp" media="(min-width: 1440px)" srcset="../img/map-desktop.webp 1x, ../img/map-desktop@2x.webp 2x">
-        <source type="image/webp" media="(min-width: 768px)" srcset="../img/map-tablet.webp 1x, ../img/map-tablet@2x.webp 2x">
-        <source type="image/webp" srcset="../img/map-mobile.webp 1x, ../img/map-mobile@2x.webp 2x">
-        <source media="(min-width: 1440px)" srcset="../img/map-desktop.png 1x, ../img/map-desktop@2x.png 2x">
-        <source media="(min-width: 768px)" srcset="../img/map-tablet.png 1x, ../img/map-tablet@2x.png 2x">
-        <img class="contacts__map" src="../img/map-mobile.png" srcset="../img/map-mobile@2x.png 2x" width="320" height="362" alt="Карта расположения Кэт Энерджи">
-      </picture>
       <div class="page-footer__icons-box">
         <div class="page-footer__wrapper container">
           <div class="page-footer__logo">
@@ -200,6 +206,6 @@
         </div>
       </div>
     </footer>
-    <script src="../js/menu.js"></script>
+    <script src="../js/script.min.js"></script>
   </body>
 </html>
