--- a/source/index.html
+++ b/source/index.html
@@ -155,7 +155,7 @@
           </div>
         </div>
         <div class="contacts__map">
-          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A03432c4579b2095a171b70dc28104d3c920fa020d9275bb464601fc84fb11eee&amp;source=constructor" width="100%" height="362" frameborder="0"></iframe>
+          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A03432c4579b2095a171b70dc28104d3c920fa020d9275bb464601fc84fb11eee&amp;source=constructor" style="width:100%;border:0;" height="362"></iframe>
           <picture>
             <source type="image/webp" media="(min-width: 1440px)" srcset="../img/map-desktop.webp 1x, ../img/map-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)" srcset="../img/map-tablet.webp 1x, ../img/map-tablet@2x.webp 2x">
